<resources>
    <string name="activity_training_history_name">История тренировок</string>
    <string name="activity_training_statistics_name">Статистика тренировки</string>
    <string name="activity_training_name">Тренировка</string>
    <string name="time_left">осталось времени</string>
    <string name="next">Следующий</string>
    <string name="stop">Закончить</string>
    <string name="activity_start_page_name">Начальная страница</string>
    <string name="activity_create_presentation_name">Добавление презентации</string>
    <string name="activity_edit_presentation_name">Добавление новой презентации</string>
    <string name="time_limit">Ограничение времени на доклад (минут)</string>
    <string name="notifications">Уведомления</string>
    <string name="presentation_date">Дата доклада</string>
...
    <string name="recommendation_speed_with_error">Скорость демонстрации слайдов вашей презентации существенно отличается от рекомендуемой. Попробуйте %1$s время отображения слайдов.</string>
    <string name="recommendation_speed_without_error">Cкорость демонстрации слайдов %1$s</string>
    <string name="recommendation_speed_increase_info">существенно выше рекомендуемого значения. Рекомендуется увеличить время отображения указанных слайдов.</string>
    <string name="recommendation_speed_decrease_info">существенно ниже рекомендуемого значение. Рекомендуется уменьшить время отображения указанных слайдов.</string>


    <string name="performance_recommendations">Рекомендации к выступлению</string>
    <string name="slide_time">Время слайдов</string>
    <string name="slides_time_recommendation">Рекомендации по времени слайдов - заглушка"</string>
    <string name="slides_frequency">Частота слайдов</string>
    <string name="slides_frequency_recommendation">Рекомендации по частоте слов - заглушка</string>
    <string name="scum_words_label">Слова паразиты</string>
    <string name="scum_words_recommendation">Рекомендации по словам-паразитам - заглушка</string>
    <string name="back_to_statistics">Назад к статистике</string>
    <string name="to_home_screen">На главную</string>

    <string name="average_speed">Средняя скорость: </string>
    <string name="best_slide">Лучший слайд: </string>
    <string name="worst_slide">Худший слайд: </string>
    <string name="speech_speed_units">слов/мин</string>
    <string name="training_time">Время тренировки:</string>
...
    <string name="pref_header_general">Основные</string>

    <string name="pref_title_enable_statistics">Включить анализ статистики</string>
    <string name="pref_description_enable_statistics">Отображение графиков после выступления
    </string>
    <string name="pref_title_enable_deb_pres">Включить тестовые презентации</string>
    <string name="deb_speech_audio_key">deb_speech_audio</string>
    <string name="speed_key">speed_key</string>
    <string name="pref_title_enable_deb_speech_audio">Включить тестовую звуковую дорожку</string>
    <string name="deb_pres">Отладочная презентация</string>
    <string name="deb_pres_name">making_presentation.pdf</string>
    <string name="first_debug_presentation_name">making_first_presentation</string>
    <string name="second_debug_presentation_name">making_second_presentation</string>
    <string name="set_number_into_NP">Set the passed number into the NumberPicker</string>
    <string name="first_debug_time">01 min: 00 sec</string>
    <string name="second_debug_time">02 min: 00 sec</string>
    <string name="edit">"Редактировать"</string>

    <string name="making_presentation">making_presentation</string>

    <string name="pref_title_display_name">Имя пользователя</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Желательный темп речи</string>

...
    <string name="CURRENT_TRAINING_ID">current_training_id</string>
    <string name="changePresentationFlag">change_presentation_flag</string>
    <string name="save">Сохранить</string>

    <string name="change">"Редактировать"</string>
    <string name="no">"Нет"</string>
    <string name="remove">"Удалить"</string>

    <!-- For Change Presentation -->
    <string name="request_for_remove_presentation">"Вы действительно хотите удалить презентацию "</string>
    <string name="name_of_pres">Название презентации: </string>
    <string name="cur_training_title">Текущая тренировка: </string>
    <string name="date_and_time_to_start_training">Дата и время начала: </string>
...
    <string name="min_training_time">Минимальное время тренировки: </string>

    <string name="average_time">Среднее время тренировки: </string>
    <string name="total_words_count">Сказано слов всего: </string>
    <string name="average_earning_1">Средняя / минимальная</string>
    <string name="average_earning_2">/ максимальная оценка: </string>
    <string name="scores">баллов</string>
    <string name="training_statistics_directory">training_statistics</string>
    <string name="error_creating_text_file">Ошибка в создании текстового файла</string>
    <string name="successful_export_statistics">Статистика успешно сохранена в дирректорию</string>
    <string name="error_export_statistics">Ошибка при экспорте статистики</string>

    <string name="pie_chart_tittle">Наиболее популярные слова</string>
...
    <string name="authors">Евгений Моторин\nМихаил Дементьев\nДмитрий Путьков\nДарья Шаркова\nКирилл Хохлов\nВладимир Андросов\nМарк Заславский</string>
    <string name="about_text">Приложение позволяет совершенствовать ораторские навыки при подготовке к публичным выступлениям с использованием мультимедиа презентаций в формате PDF, следить за прогрессом и делится достижениями в социальных сетях.</string>
    <string name="average_time_chart">Среднее время</string>
    <string name="tempImageName">tempImage.pdf</string>
    <string name="dbName">apst.0.4</string>
    <string name="attention">Уведомляем: наше приложение собирает статистику тренировок в научных целях.</string>
    <string name="useStatistics">use_statistics</string>
    <string name="good">Хорошо</string>
    <string name="no_thnx">Нет, спасибо</string>
    <string name="start_training">Начать тренировку?</string>
    <string name="yes">ДА</string>
    <string name="firstSyncFlag">first_sync_flag</string>
    <string name="pdfErrorMsg">File not in PDF format.\nPlease choose another.</string>
...
