...
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/performance_recommendations"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/slidesTimeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
...
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/word_frequency_recommendation"
            android:textSize="15sp" />
        <TextView
            android:visibility="gone"
            android:id="@+id/slidesFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
...
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/slides_frequency_recommendation"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/scumWordsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
...
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/scum_words_recommendation"
            android:textSize="15sp" />

        <Button
            android:id="@+id/backToStatistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/back_to_statistics"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15sp" />

        <Button
            android:id="@+id/toHomeScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
...
