...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/earnOfTrain"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
...
                    android:text="@string/pause_time_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/improve_mark_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
...
