...
            </LinearLayout>

        </LinearLayout>


        <ImageButton
            android:id="@+id/training_history_btn_start_page_row"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|right"
            android:layout_margin="15dp"
            android:background="@drawable/calendar"
            android:foreground="@drawable/card_foreground" />
...
